# awesome-ai-startups

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  LICENSE  README.md  README_ZH.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-company.yml  bug-report.yml  feature-request.yml
.github/workflows/: daily-scrape.yml  deploy-pages.yml  validate-pr.yml
data/: categories.json  index.json  stats.json  tags.json
data/archive/: analytica.json  apple.json  arcade.json  art-of-hacking.json  avance-consulting.json  azumo.json  bright-vision-technologies.json  canopy.json  centerline-logistics-corporation.json  cis.json  crossing-hurdles.json  cymertek-corporation.json  dixon-group-europe-ltd-middle-east.json  ecosave.json  (+21 more)
docs/: design-plan.md  redesign-v3.md  scraper-status.txt
scrapers/: __init__.py  base.py  base_job_scraper.py  cli.py  config.py  keyword_matcher.py  utils.py
scripts/: migrate_categories.py  migrate_company_to_product.py  seed_data.py  validate_all.py
tests/: conftest.py  test_base.py  test_base_job_scraper.py  test_china_http.py  test_cli.py  test_cross_validator.py  test_deduplicator.py  test_firecrawl_client.py  test_indeed_scraper.py  test_keyword_matcher.py  test_lagou_scraper.py  test_liepin_scraper.py  test_llm_enricher.py  test_merger.py  test_normalizer.py  test_quality_scorer.py  test_schema_validator.py  test_stats_generator.py  test_tag_inference.py  test_zhipin_scraper.py
website/: next.config.ts  package-lock.json  package.json
(+429 files in other folders)
